DISEÑO Y APLICACIÓN DE HOJAS DE ESTILO

--- a/html/Recuperacion.html
+++ b/html/Recuperacion.html
@@ -32,6 +32,7 @@
         <article>
             <h2 class="encabezado_articulo"> Primavera </h2>
             <p class="texto">Resumen..............</p>
+            <small style="display:block; margin-left: 3em"></small>
         </article>
         </div>
 
@@ -59,9 +60,12 @@
             <div class="menu_fueraSeccion">
                 <nav>
                     <ul>
-                        <li> <a style="display: block;" href="">Primula</a></li>
-                        <li> <a style="display: block;" href="">Calendula</a></li>
-                        <li> <a style="display: block;" href="">Verbena</a></li>
+                        <li style="display: block;" href="">Primula</li>
+                        <li style="display: block;" href="">Calendula</li>
+                        <li style="display: block;" href="">Verbena</li>
+                        <li style="display: block;" href="">Cineraria</li>
+                        <li style="display: block;" href="">Salvia</li>
+                        <li style="display: block;" href="">Petunia</li>
                     </ul>
                 </nav>
             </div>
