--- a/html/Recuperacion.html
+++ b/html/Recuperacion.html
@@ -12,16 +12,17 @@
 <body>
     <div id="Encabezado">
     <header>
-        <h1>Encabezado</h1>
+        <h1>Estaciones del año</h1>
     </header>
     </div>
 
     <div id="menu">
     <nav>
         <ul>
-            <li> <a href="primavera.com"> Info </a></li>
-            <li> <a href="gmail.com"> Correo </a></li>
-            <li> <a href="google.com"> Buscar </a></li>
+            <li> <a href="primavera.com"> Primavera </a></li>
+            <li> <a href="Verano.com"> Verano </a></li>
+            <li> <a href="Otoño.com"> Otoño </a></li>
+            <li> <a href="Invierno.com"> Invierno </a></li>
         </ul>
 
     </nav>
@@ -31,7 +32,14 @@
         <div id="articulo1">
         <article>
             <h2 class="encabezado_articulo"> Primavera </h2>
-            <p class="texto">Resumen..............</p>
+            <p class="texto">La primavera es una de las cuatro estaciones que divide el año. Esta 
+                estación inicia con el equinoccio de primavera que ocurre entre el 20 y 
+                el 21 de marzo en el hemisferio norte, y entre el 22 y el 23 de 
+                septiembre en el hemisferio sur. Durante esta época, los árboles
+                comienzan a reverdecer, y las plantas a florecer. Es importante 
+                resaltar que las estaciones: primavera, verano, otoño e invierno, no se 
+                presentan de la misma forma en todo el mundo, pues cada región 
+                puede tener un clima diferente.</p>
             <small style="display:block; margin-left: 3em"></small>
         </article>
         </div>
@@ -41,9 +49,10 @@
             <h2 class="encabezado_articulo">  </h2>
             <p class="texto"></p>
             <picture>
-                <img class="imagenes" src="/img/" alt="">
+                <img class="imagenes" src="/img/01foto.webp" alt="foto1">
+                <img class="imagenes" src="/img/02foto.jpeg" alt="foto2">
+                <img class="imagenes" src="/img/02foto.webp" alt="foto3">
             </picture>
-            <small style="display:block; margin-left: 3em"></small>
         </article>
         </div>
 
@@ -71,13 +80,36 @@
             </div>
 
         </header>
+        <header>
+            <h2>
+
+
+
+                Frutas de Primavera
+            </h2>
+
+            <div class="menu_fueraSeccion">
+                <nav>
+                    <ul>
+                        <li style="display: block;" href="">Naranja</li>
+                        <li style="display: block;" href="">Papaya</li>
+                        <li style="display: block;" href="">Pera</li>
+                        <li style="display: block;" href="">Piña</li>
+                        <li style="display: block;" href="">Pitahaya</li>
+                        <li style="display: block;" href="">Platano</li>
+                        <li style="display: block;" href="">Sandia</li>
+                    </ul>
+                </nav>
+            </div>
+
+        </header>
 
     </aside>
     </div>
     
     <div id="pie">
     <footer>
-        <h4 class="pie_pagina">Pie de pagina.</h4>
+        <h4 class="pie_pagina">Maximiliano Contreras Cepeda _ 05 de Octubre del 2022.</h4>
     </footer>
     </div>
 
