TERMINACION Y PUBLICACION DE LA PAGINA

--- a/html/Recuperacion.html
+++ b/html/Recuperacion.html
@@ -44,17 +44,14 @@
         </article>
         </div>
 
-        <div id="articulo2">
+        <div id="Contenedor-Imagenes">
         <article>
-            <h2 class="encabezado_articulo">  </h2>
-            <p class="texto"></p>
-            <picture>
-                <img class="imagenes" src="/img/01foto.webp" alt="foto1">
-                <img class="imagenes" src="/img/02foto.jpeg" alt="foto2">
-                <img class="imagenes" src="/img/02foto.webp" alt="foto3">
-            </picture>
+            <picture><img class="imagenes" src="/img/01foto.webp" alt="foto1"></picture>
+            <picture><img class="imagenes" src="/img/02foto.jpeg" alt="foto2"></picture>
+            <picture><img class="imagenes" src="/img/02foto.webp" alt="foto3"></picture>
         </article>
         </div>
+        
 
     </section>
     </div>
